# AI-Lab

./: .gitignore  pyproject.toml
lab1/: lab_1.ipynb  lab_1.py
lab1/.ipynb_checkpoints/: lab_1-checkpoint.ipynb  lab_1e-checkpoint.ipynb
lab2/: lab_2.ipynb  lab_2.py
lab2/.ipynb_checkpoints/: lab_2-checkpoint.ipynb  lab_2-checkpoint.py
lab3/: adult.data.5  lab_3.py
lab3/.ipynb_checkpoints/: lab_3-checkpoint.ipynb
lab6/: lab_6.ipynb  lab_6.py
lab6/.ipynb_checkpoints/: lab_6-checkpoint.ipynb
lab7/: lab_7.ipynb  lab_7.py
lab7/.ipynb_checkpoints/: lab_7-checkpoint.ipynb
