[tool.poetry]
name = "ai-course-agh"
version = "0.1.0"
description = "Exercises for AI course at AGH."
authors = ["Aleksander Smywinski-Pohl <apohllo@o2.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.5"
jupyterlab-execute-time = "^3.2.0"
jupytext = "^1.16.4"
numpy = "^2.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
missingno = "^0.5.2"
imbalanced-learn = "^0.12.4"
lightgbm = "^4.5.0"
torch = "^2.5.1"
opencv-python = "^4.10.0.84"
sacremoses = "^0.1.1"
datasets = "^3.2.0"
transformers = {extras = ["torch"], version = "^4.47.1"}
accelerate = "^1.2.1"
evaluate = "^0.4.3"
tensorboard = "^2.18.0"
tiktoken = "^0.8.0"
blobfile = "^3.0.0"
sentencepiece = "^0.2.0"
peft = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
